--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,14 @@ header{
     padding: 24px;    
 }
 
+.placeholder{
+    height: 39px;
+    left: 1px;
+    right: 1px;
+    top: 8px;
+    border-radius: 2px;
+    box-shadow: 0px 1px 2px rgb(0,0,0,0.2);
+}
 .texto-menu{
     font-size: 13px;
     font-weight: 400;
