--- a/styles.css
+++ b/styles.css
@@ -20,28 +20,31 @@ header{
     width: 100%;
 }
 
-.menu-desplegable{
-    display: flex;
-    flex-direction: column;
-    grid: 45px;
-}
-
 .logo{
     display: flex;
-    flex-direction: column;
-    padding: 24px;    
+    padding: 166px;
+    flex-direction: row;
+    align-items: center;
+    padding: 12px;    
 }
 
-.placeholder{
-    height: 39px;
-    left: 1px;
-    right: 1px;
-    top: 8px;
-    border-radius: 2px;
-    box-shadow: 0px 1px 2px rgb(0,0,0,0.2);
+.lista-opciones{
+    display: flex;
+    flex-direction: row;
+    gap: 17.8px;
+    justify-content: space-between;
+    
+}
+.menu-desplegable{
+    
+}
+
+.texto-oscuro{
+    font-weight: 700;
 }
 .texto-menu{
     font-size: 13px;
     font-weight: 400;
     color: #333333;
 }
+
