--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,11 @@ button{
     color: #3483FA;
 }
 
+.ver-mas{
+    color: #3483FA;
+    margin-bottom: 21.19px;
+    padding-top:50px;
+}
 .titulo-ofertas{
     font-size: 25px;
     color: #666666;
@@ -410,6 +415,25 @@ button{
     color: #666666;
     margin-bottom: 21.19px;
     padding-top:50px;
+}
+
+.populares-section{
+    background-color: white;
+}
+
+.populares-container{
+    display: flex;
+    flex-direction: row;
+}
+
+.tarjeta-categoria{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;    
+    width: 170px;
+    height: 170px;
+    border: 1px ridge #EAE6E6;
 }
 
 .footer-container{
