--- a/styles.css
+++ b/styles.css
@@ -279,6 +279,7 @@ button{
     display: flex;
     flex-direction: row;
     gap: 36px;
+    width: 100%;
 }
 
 .tarjeta-muebles {
@@ -431,7 +432,7 @@ button{
     flex-direction: column;
     justify-content: center;
     align-items: center;    
-    width: 170px;
+    width: 100%;
     height: 170px;
     border: 1px ridge #EAE6E6;
 }
