--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,10 @@ button{
     color: black;
 }
 
+.opciones-subs{
+    
+}
+
 .suscribe-container{
     display: flex;
     flex-direction: row;
@@ -437,6 +441,40 @@ button{
     border: 1px ridge #EAE6E6;
 }
 
+.seccion-otra-informacion{
+    display: flex;
+    flex-direction: row;
+    width: 556;
+    height: 300px;
+}
+
+.otra-informacion{
+    width: 100%;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.titulo-otra-informacion{
+    font-size: 20px;
+    font-weight: 500;
+    color: #4B4B4B;
+    margin-top: 21.72px;
+}
+
+p{
+    font-weight: 400;
+    font-size: 15px;
+    color: #999999;
+    text-align: center;
+    width: 296.23px;
+    height: 57px;
+    margin-top: 2;
+    margin-bottom: 9;
+
+}
 .footer-container{
     padding: 17px;
 }
