--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ main{
 }
 
 section{
-    width: 1200px;
+    width: 1184px;
     margin: 45px;
     padding: -10%;
 }
@@ -107,12 +107,12 @@ button{
     margin-bottom: 21.19px;
     padding-top:50px;
 }
+
 .titulo-ofertas{
     font-size: 25px;
     color: #666666;
     font-weight: 300;
     margin-bottom: 21.19px;
-    padding-top:50px;
 }
 
 .ofertas-section{
@@ -167,29 +167,34 @@ button{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color:#0c1a51;
+    align-items: center;
+    background:linear-gradient(to right, #A90F90, #0c1a51);
+    height: 87px;
 }
 
 .suscribe-info{
     margin: 24px;
-    
 }
+
 .titulo-suscribe{
     font-size: 25px;
     font-weight: 600;
     color: white;
+    margin-left: 24px;
 }
 
 .texto-oferta{
     font-size: 22px;
     font-weight: 600;
     color: white;
+    margin-right: 24.48px;
 }
 
 .texto-descuento{
     font-size: 14px;
     font-weight: 500;
     color: white;
+    margin-right: 91.94px;
 }
 
 .texto-descuento-subrayado{
@@ -206,14 +211,36 @@ button{
 }
 
 .opciones-subs{
-    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 17px;
+}
+
+.texto-organizado{
+    text-align: justify;
+    width: 240.39px;
+    height: 48px;
+
 }
 
 .suscribe-container{
     display: flex;
     flex-direction: row;
     gap: 74px;
+    justify-content: space-between;
     align-items: center;
+}
+
+.suscribe-button{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-left: 1026.28;
+    margin-bottom: 16px;
+    margin-right: 30px;
+
 }
 
 .beneficios-content{
@@ -303,6 +330,12 @@ button{
     font-size: 28px;
     line-height: 30.8px;
     color: #4B4B4B;
+    text-align: justify;
+}
+
+.alineado-texto{
+    display: flex;
+    flex-direction: column;
 }
 
 .otro-titulo{
@@ -310,6 +343,7 @@ button{
     font-size: 28px;
     line-height: 30.8px;
     color: #4B4B4B;
+    margin-right: 34px;
 }
 
 .encabezado-descubre{
@@ -439,6 +473,7 @@ button{
     width: 100%;
     height: 170px;
     border: 1px ridge #EAE6E6;
+    text-align: center;
 }
 
 .seccion-otra-informacion{
