--- a/styles.css
+++ b/styles.css
@@ -56,9 +56,19 @@ button{
     margin-right:52px;
 }
 
+.cuadro-busqueda{
+    width: 598px;
+    height: 39px;
+    margin-top: 8px;
+    margin-right: 52px;
+    border-radius: 5%;
+    border: groove;
+}
+
 .lista-opciones{
     display: flex;
     flex-direction: row;
+    margin-top: 21px;
     gap: 17.8px;
     justify-content: space-between;
     
@@ -83,6 +93,8 @@ button{
 .cuadro-medios-pago{
     display: flex;
     flex-direction: row;
+    height: 90px;
+    align-items: center;
     gap: 100px;
     background-color: white;
 }
@@ -363,24 +375,23 @@ button{
 .tarjeta-tiendas{
     display: flex;
     flex-direction: column;
+    position: relative;
     width: 284px;
     height: 340px;
     gap: 16px;
     background-color: white;
-    justify-content: center;
     align-items: center;
+}
+
+.tarjeta-tienda-logo{
+    position: absolute;
+    top: 55px;
 }
 
 .nombre-tienda{
     font-size: 24px;
     font-weight: 600;
     color: #333333;
-}
-
-.banner-tiendas{
-    position: absolute;
-    margin: 245px;
-    padding: 100px;
 }
 
 .ver-tienda{
